# kwork-notificator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 3555084bea49_initial.py
app/clients/: __init__.py
app/clients/kwork/: kwork.py
app/core/: config.py
app/db/: session.py
app/models/: sent_task.py
app/schemas/: __init__.py  task.py
app/utils/: __init__.py  replace_symbols.py
