[project]
name = "kwork-notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytelegrambotapi>=4.29.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
